--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/axios": "^0.14.0",
+    "@types/react-native-sqlite-storage": "^5.0.2",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -25,6 +28,7 @@
     "expo-linking": "~3.0.0",
     "expo-radio-button": "^1.0.8",
     "expo-splash-screen": "~0.14.0",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
@@ -34,6 +38,7 @@
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
