--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/slider": "^4.2.1",
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -35,11 +36,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-color-picker": "^0.6.0",
     "react-native-paper": "^4.11.2",
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-view-shot": "^3.1.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
